# unet

./: .dir-locals.el  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.md  README.md  build.md  build.rs
.cargo/: config.toml
.github/workflows/: CD.yaml  CI.yaml  README.md  ci-cd.yaml  ci.yaml  main-ci.yaml  main.yaml  push.yaml
demo/blinky/: Cargo.toml
demo/blinky/src/: main.rs
examples/: README.md
src/: README.md  browser.rs  cli.md  cloud.rs  deploy.md  deploy.rs  lib.md  lib.rs  main.rs
unet/: Cargo.toml  Dockerfile  index.html  template.yaml
unet/src/: auth.md  cloud.rs  lib.md  lib.rs  main.rs
