[workspace]
resolver = "2"
members = [
    "unet",
    "demo/*",
]
default-members = [
    "unet",
]

[workspace.package]
edition = "2021"
version = "0.2.0-dev"
description = "A Distributed Operating System in Rust"
authors = ["Peter Thompson <peter@unet.tech>"]
homepage = "unet.tech"
repository = "https://github.com/9pt7/unet.git"

[workspace.dependencies]
aws-config = "0.56.1"
aws-sdk-apigatewaymanagement = "0.33.0"
aws-sdk-cloudformation = "0.33.0"
aws-sdk-cognitoidentityprovider = "0.31.1"
aws-sdk-dynamodb = "0.33.0"
aws-sdk-ecr = "0.32.0"
aws-sdk-s3 = "0.33.0"
aws_lambda_events = "0.11.1"
base64 = "0.21.4"
clap = { version = "4.4.6", features = ["derive", "wrap_help"] }
cookie = "0.18"
dirs = "5.0.1"
futures = "0.3.29"
futures-util = "0.3.28"
http = "0.2.4"
js-sys = "0.3.64"
jsonwebtoken = { version = "9", default-features = false }
lambda_http = "0.8.1"
lambda_runtime = "0.8.2"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls", "json"] }
reqwest_cookie_store = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full", "test-util"] }
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-native-roots"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
unet = { path = "./unet" }
url = "2.4.1"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'console',
] }
yew = { version = "0.21.0", features = ["csr"] }

# 'unet deploy' deploys all the binaries at the same time.
